# grok-research-agent

./: .gitignore  DEPTH_DIAGNOSTIC_REPORT.md  FUNCTIONAL_SPEC.md  INSTALLATION.md  README.md  TEST_REPORT.md  USER_GUIDE.md  grok_client.py  main.py  pyproject.toml  requirements.txt  sample_command.txt  session_manager.py  topic1.bat  topic2.bat  topic3.bat  topic4.bat  topic5.bat  workflow_phases.py
grok_research_agent/: cli.py  grok_client.py  session_manager.py  workflow_phases.py
grok_research_agent/prompts/: compile_auto_hypergraph_prompt.txt  core_concepts_prompt.txt  curation_prompt.txt  discovery_prompt.txt  drill_pack_prompt.txt  extraction_plan_prompt.txt  extraction_prompt.txt  final_polish_prompt.txt  gap_prompt.txt  glossary_prompt.txt  images_prompt.txt  notebook_prompt.txt  revise_prompt.txt  scope_prompt.txt  section_draft_prompt.txt  section_evidence_prompt.txt  synthesis_prompt.txt  update_hypergraph_prompt.txt
tests/: test_cli.py  test_session_manager.py  test_workflow_happy_path.py
